--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,8 @@
   <link type="text/css" rel="stylesheet" href="/public/styles.css">
 </head>
 	<nav>
-		<h1>Testing</h1>
+		<h1>2Do List</h1>
+    <h4><a href="/logout">Logout</a>
 	</nav>
 <body>
   <%#= We use flash[:notice] and flash[:error] to display one-time messages to the user. Something like "Successfully logged in!" or "Could not log in :(" would go in these %>
