--- a/views/new_list_form.erb
+++ b/views/new_list_form.erb
@@ -1,7 +1,7 @@
 <form action="/new_list_form" method="post">
 
-<input type="text" placeholder="Enter post title" name="title">
+<input type="text" placeholder="Enter List Title" name="title">
 
-<input type="text" placeholder="Enter description" name="body">
+<input type="text" placeholder="Enter Description" name="body">
 
 <input type="submit">
