--- a/views/tasks.erb
+++ b/views/tasks.erb
@@ -1,5 +1,5 @@
-<!-- <%= @lists %> -->
-<h3>All lists</h3>
+<h3>All tasks</h3>
+<h2><a href="/lists">Back</a>
 <h2><%= erb :new_list_form %></h2>
 <ul>
 	<% @lists.each do |list| %>
