a user can now view every list

--- a/views/lists.erb
+++ b/views/lists.erb
@@ -3,6 +3,7 @@
 <h2><%= erb :new_list_form %></h2>
 <ul>
 	<% @lists.each do |list| %>
-	<li><a href="/:list/tasks"><%= list.title %> </li>
+	<li><a href="/:list_id/tasks"><%= list.title %> </li>
 	<% end %>
 </ul>
+
