--- a/views/tasks.erb
+++ b/views/tasks.erb
@@ -2,7 +2,7 @@
 <h2><a href="/lists">Back</a>
 <h2><%= erb :new_list_form %></h2>
 <ul>
-	<% @lists.each do |list| %>
-	<li><a href="/:list/tasks"><%= list.title %> </li>
+	<% @task.each do |task| %>
+	<li><a href=":list_id/tasks"><%= task.title %> </li>
 	<% end %>
 </ul>
