--- a/views/new_task_form.erb
+++ b/views/new_task_form.erb
@@ -1,4 +1,4 @@
-<form action="/new_task" method="post">
+<form action="/new_task_form" method="post">
 
 <input type="text" placeholder="Enter Task Title" name="task_title">
 
