--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>2Do | To-Do List</title>
-  <link type="text/css" rel="stylesheet" href="/public/styles.css">
+  <link type="text/css" rel="stylesheet" href="/styles.css">
 </head>
 	<nav>
 		<h1>2Do List</h1>
