--- a/views/lists.erb
+++ b/views/lists.erb
@@ -1,8 +1,24 @@
 <!-- <%= @lists %> -->
+<head>
+	<link type="text/css" rel="stylesheet" href="./public/styles.css">
+</head>
 <h3>All lists</h3>
 <h2><%= erb :new_list_form %></h2>
-<ul>
+
+<table>
+	<tr>
+		<th>Name</th>
+		<th>Description</th>
+		<th>Edit</th>
+		<th>Delete</th>
+	</tr>
+
 	<% @lists.each do |list| %>
-	<li><a href="/<%= list.id %>/tasks"><%= list.title %> </li>
+	<tr class="icon">
+		<td><a href="/<%= list.id %>/tasks"><%= list.title %> </td>
+		<td><p><%= list.body %></p></td>
+		<td><a href="/<%= list.id %>/edit"><img width="25px" src="/images/edit.svg" alt="Edit"></a></td>
+		<td><a href="/<%= list.id %>/delete"><img width="25px" src="/images/delete.svg" alt="Delete"></a></td>
+	</tr>
 	<% end %>
-</ul>
+</table>
