added more images and main logo

--- a/views/lists.erb
+++ b/views/lists.erb
@@ -9,8 +9,7 @@
 	<tr>
 		<th>Name</th>
 		<th>Description</th>
-		<th>Edit</th>
-		<th>Delete</th>
+		<th colspan="2">Optons</th>
 	</tr>
 
 	<% @lists.each do |list| %>
