--- a/views/new_list_form.erb
+++ b/views/new_list_form.erb
@@ -4,4 +4,4 @@
 
 <input type="text" placeholder="Enter Description" name="body">
 
-<input class="submit" type="submit">
+<input class="submit" type="submit" value="Add New List!">
