--- a/views/new_task_form.erb
+++ b/views/new_task_form.erb
@@ -2,8 +2,8 @@
 
 <input type="text" placeholder="Enter Task Title" name="title">
 
-<input type="text" placeholder="Enter Task Description" name="description">
+<input type="text" placeholder="Enter Task Details" name="description">
 
 <input type="hidden" name="list_id" value="<%= @list_id %>">
 
-<input class="submit" type="submit">
+<input class="submit" type="submit" value"Add A New Task!>
