--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,14 @@ body {
 	margin: auto;
 }
 
+.logo {
+	display: inline-block;
+}
+
+nav {
+	display: inline-block;
+}
+
 a{
 	color: inherit;
 	text-decoration: none;
@@ -30,7 +38,7 @@ ul {
 	height: auto;
 }
 
-img {
+table img {
 	width: 25px;
 }
 
