--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,11 +3,14 @@
 <head>
   <title>2Do | To-Do List</title>
   <link type="text/css" rel="stylesheet" href="/styles.css">
+    <nav>
+    <div class="logo">
+      <img src="/images/2do.png" alt="2do Logo"></img>
+    </div>
+    <h5><a href="/logout">Logout</a></h5>
+  </nav>
 </head>
-	<nav>
-		<h1>2Do List</h1>
-    <h4><a href="/logout">Logout</a>
-	</nav>
+
 <body>
   <%#= We use flash[:notice] and flash[:error] to display one-time messages to the user. Something like "Successfully logged in!" or "Could not log in :(" would go in these %>
   <% if flash[:notice] %>
