--- a/views/tasks.erb
+++ b/views/tasks.erb
@@ -1,7 +1,21 @@
-<h3>All tasks</h3>
-<h4><a href="/lists">Back to all list</a><%= erb :new_task_form %></h4>
-<ul>
-	<% @tasks.each do |task| %>
-	<li><a href=":list_id/tasks"><%= task.title %> </li>
+<h3>All Tasks</h3>
+<h2><a href="/lists"><img width="25px" src="/images/back.svg" alt="Edit"></a><%= erb :new_task_form %>
+</h2>
+
+<table>
+	<tr>
+		<th>Task To-Do</th>
+		<th>Details</th>
+		<th colspan="2">Options</th>
+	</tr>
+
+
+	<% @tasks.each do |task| %>	
+	<tr class="icon">
+		<td><a href="/:list_id/tasks"><%= task.title %> </td>
+		<td><a href="/:list_id/tasks"><%= task.description %> </td>
+		<td><a href="/:list_id/tasks"><img width="25px" src="/images/edit.svg" alt="Edit"></a></td>
+		<td><a href="/:list_id/tasks"><img width="25px" src="/images/delete.svg" alt="Delete"></a></td>
+	</tr>
 	<% end %>
-</ul>
+</table>
