--- a/public/styles.css
+++ b/public/styles.css
@@ -59,7 +59,7 @@ td:nth-child(6) { background: hsl(200, 99%, 50%); }
 
 .submit {
 	width:500px;
-	background: #3e9cbf; /*the colour of the button*/
+	background: #0bc8a2; /*the colour of the button*/
 	padding: 8px 14px 10px; /*apply some padding inside the button*/
 	border:1px solid #3e9cbf; /*required or the default border for the browser will appear*/
 	cursor:pointer; /*forces the cursor to change to a hand when the button is hovered*/
