--- a/views/lists.erb
+++ b/views/lists.erb
@@ -9,7 +9,7 @@
 	<tr>
 		<th>Name</th>
 		<th>Description</th>
-		<th colspan="2">Optons</th>
+		<th colspan="2">Options</th>
 	</tr>
 
 	<% @lists.each do |list| %>
