--- a/public/styles.css
+++ b/public/styles.css
@@ -13,9 +13,17 @@ nav {
 	display: inline-block;
 }
 
-a{
+a {
 	color: inherit;
 	text-decoration: none;
+}
+
+h5 {
+	text-align: right;
+}
+
+label {
+	font-size: 20px;
 }
 
 input,
