--- a/views/new_task_form.erb
+++ b/views/new_task_form.erb
@@ -6,4 +6,4 @@
 
 <input type="hidden" name="list_id" value="<%= @list_id %>">
 
-<input class="submit" type="submit" value"Add A New Task!>
+<input class="submit" type="submit" value"Add A New Task!">
