able to update working

--- a/views/delete_task_form.erb
+++ b/views/delete_task_form.erb
@@ -1,6 +1,6 @@
 <h3>Are you sure you want to delete this task?</h3>
 
-<blockquote><p><%= @task_title %></p></blockquote>
+<p><%= @task_title %></p>
 
 <form method="post" action="/task_removed"> 
 
@@ -9,5 +9,3 @@
 	<input class="submit" type="submit" value="Delete Task">
 
 </form>
-
-
