--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
   <title>2Do | To-Do List</title>
   <link type="text/css" rel="stylesheet" href="/styles.css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
     <nav>
     <div class="logo">
       <img src="/images/2do.png" alt="2do Logo"></img>
