--- a/views/lists.erb
+++ b/views/lists.erb
@@ -1,7 +1,7 @@
 <head>
 	<link type="text/css" rel="stylesheet" href="./public/styles.css">
 </head>
-<h1>All lists</h1>
+<h1>All Lists</h1>
 <h2><%= erb :new_list_form %></h2>
 
 <table>
@@ -15,7 +15,7 @@
 	<tr class="icon">
 		<td><a href="/<%= list.id %>/tasks"><%= list.title %> </td>
 		<td><p><%= list.body %></p></td>
-		<td><a href="/<%= list.id %>/edit"><img width="25px" src="/images/edit.svg" alt="Edit"></a></td>
+		<td><a href="/list/<%= list.id %>/edit"><img width="25px" src="/images/edit.svg" alt="Edit"></a></td>
 		<td><a href="/something/<%= list.id %>/delete"><img width="25px" src="/images/delete.svg" alt="Delete"></a></td>
 	</tr>
 	<% end %>
