--- a/views/tasks.erb
+++ b/views/tasks.erb
@@ -1,4 +1,4 @@
-<h1>Add A New Task</h1>
+<h1><%= @list_title.title %></h1>
 <h2><a href="/lists"><img width="25px" src="/images/back.svg" alt="Edit">Go back to all lists</a><%= erb :new_task_form %>
 </h2>
 
