--- a/views/delete_task_form.erb
+++ b/views/delete_task_form.erb
@@ -1,6 +1,6 @@
 <h3>Are you sure you want to delete this task?</h3>
 
-<p><%= @task_title %></p>
+<blockquote>><%= @task.title %></blockquote>
 
 <form method="post" action="/task_removed"> 
 
