list name now appears on edit form

--- a/views/edit_list_form.erb
+++ b/views/edit_list_form.erb
@@ -1,3 +1,7 @@
+<h3>Are you sure you want to edit this list?</h3>
+
+<h3><%= @list.title %></h3>
+
 <form action="/list/<%= @list_id %>/edit" method="post">
 
 <input type="text" placeholder="Enter List Title" name="title">
