--- a/views/edit_task_form.erb
+++ b/views/edit_task_form.erb
@@ -1,8 +1,6 @@
-<h3>Are you sure you want to edit this task?
+<h3>Are you sure you want to edit this task?</h3>
 
-<blockquote><%= @task.title %></blockquote>
-
-</h3>
+<h3><%= @task.title %></h3>
 <form action="/task/<%= @task_id %>/edit" method="post">
 
 <input type="text" placeholder="Enter List Title" name="title">
