--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
     <nav>
     <div class="logo">
-      <img src="/images/2do.png" alt="2do Logo"></img>
+      <img src="/images/2do_small.png" alt="2do Logo"></img>
     </div>
     <h5><a href="/logout">Logout</a></h5>
   </nav>
