fixed css for login/signup

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
     <div class="logo">
       <img src="/images/2do_small.png" alt="2do Logo"></img>
     </div>
-    <h5><a href="/logout">Logout</a></h5>
+      <h5><a class="nav" href="/logout">Logout</a></h5>
   </nav>
 </head>
 
@@ -24,8 +24,9 @@
   <% end %>
 
   <%= yield %>
-</body>
-<footer>
+  <footer>
   <p>Property of Maury T. Lindo | All rights reserved</p>
 </footer>
+</body>
+
 </html>
