--- a/views/edit_list_form.erb
+++ b/views/edit_list_form.erb
@@ -1,12 +1,13 @@
+<h5><a class="logout" href="/logout">Logout</a></h5>
 <h3>Are you sure you want to edit this list?</h3>
 
 <h3><%= @list.title %></h3>
 
 <form action="/list/<%= @list_id %>/edit" method="post">
 
-<input type="text" placeholder="Enter List Title" name="title">
+<input type="text" placeholder="Edit List Title" name="title">
 
-<input type="text" placeholder="Enter Description" name="body">
+<input type="text" placeholder="Edit Description" name="body">
 
 <input type="hidden" name="list_id" value="<%= @list_id %>">
 
