--- a/views/form.erb
+++ b/views/form.erb
@@ -19,7 +19,7 @@
             <td =class="signup">
               <label for="password_confirmation">Password confirmation:</label>
               <input type="password" name="password_confirmation" class="text">
-              <input type="submit" value="Send" class="button">
+              <input type="submit" name="Sign-up" value="Send" class="button">
             </td>
           </tr>
         <% end %>
