--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,10 +8,9 @@
     <div class="logo">
       <img src="/images/2do_small.png" alt="2do Logo"></img>
     </div>
-      <h5><a class="nav" href="/logout">Logout</a></h5>
+      
   </nav>
 </head>
-
 <body>
   
   <%#= We use flash[:notice] and flash[:error] to display one-time messages to the user. Something like "Successfully logged in!" or "Could not log in :(" would go in these %>
@@ -25,8 +24,7 @@
 
   <%= yield %>
   <footer>
-  <p>Property of Maury T. Lindo | All rights reserved</p>
+  <p>Property of Maury T. Lindo | All Rights Reserved</p>
 </footer>
 </body>
-
 </html>
