--- a/views/new_task_form.erb
+++ b/views/new_task_form.erb
@@ -1,8 +1,8 @@
 <form action="/new_task_form" method="post">
 
-<input type="text" placeholder="Enter Task Title" name="title">
+<input type="text" placeholder="Enter New Task" name="title">
 
-<input type="text" placeholder="Enter Task Details" name="description">
+<input type="text" placeholder="Enter Details" name="description">
 
 <input type="hidden" name="list_id" value="<%= @list_id %>">
 
