--- a/views/delete_task_form.erb
+++ b/views/delete_task_form.erb
@@ -1,3 +1,4 @@
+<h5><a class="logout" href="/logout">Logout</a></h5>
 <h3>Are you sure you want to delete this task?</h3>
 
 <form method="post" action="/task_removed"> 
