--- a/views/edit_task_form.erb
+++ b/views/edit_task_form.erb
@@ -1,11 +1,12 @@
+<h5><a class="logout" href="/logout">Logout</a></h5>
 <h3>Are you sure you want to edit this task?</h3>
 
 <h3><%= @task.title %></h3>
 <form action="/task/<%= @task_id %>/edit" method="post">
 
-<input type="text" placeholder="Enter List Title" name="title">
+<input type="text" placeholder="Edit List Title" name="title">
 
-<input type="text" placeholder="Enter Description" name="description">
+<input type="text" placeholder="Edit Description" name="description">
 
 <input type="hidden" name="task_id" value="<%= @task_id %>">
 
