--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,4 @@
-<h1>Login or <a class="signup" href="/signup">Sign-up</a></h1>
+<h1>Login or <a class="signup" href="/signup">Sign Up</a></h1>
 <form action="/login" method="post">
   <div class="field">
     <div class="label">
@@ -12,7 +12,7 @@
     </div>
     <input id="user_password" name="password" size=30 type="password"></div>
   <div class="buttons">
-    <input value="Login" type="submit">
+    <input value="Login" type="submit" class="submit" name="Login">
     <!-- <h1><a class="signup" href="/signup">Sign up</a></h1> -->
   </div>
 </form>
