--- a/views/new_list_form.erb
+++ b/views/new_list_form.erb
@@ -1,6 +1,6 @@
 <form action="/new_list_form" method="post">
 
-<input type="text" placeholder="Enter List Title" name="title">
+<input type="text" placeholder="Enter New List" name="title">
 
 <input type="text" placeholder="Enter Description" name="body">
 
