--- a/views/new_login_form.erb
+++ b/views/new_login_form.erb
@@ -6,6 +6,6 @@
   <% if @password_confirmation %>
   <label for="password_confirmation">Password confirmation:</label>
   <input type="password" name="password_confirmation" class="text">
-  <input type="submit" value="Send" class="button">
+  <input type="submit" value="Sign Up" class="submit">
   <% end %>
 </form>
