--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,3 +1,3 @@
-<h1 class="signup">Sign Up</h1>
+<h1>Sign Up</h1>
 <%= erb :new_login_form %>
-<a href='/'>Cancel</a>
+<h2><a href='/'>Cancel</a></h2>
